# pdf-reader

./: .dockerignore  Dockerfile  docker-compose.yaml
backend/: .env  Cargo.toml  sqlx-data.json
backend/migrations/: 20211021160552_documents_table.sql  20230106101018_bookmarks.sql
backend/scripts/: init_db.sh
backend/src/: configuration.rs  database.rs  documents.rs  indexer.rs  lib.rs  main.rs  models.rs  startup.rs  telemetry.rs
backend/src/routes/: bookmarks.rs  documents.rs  mod.rs  search.rs
backend/src/routes/documents/: get_all.rs  get_by_id.rs  mod.rs  patch.rs  post.rs
backend/tests/: helpers.rs  main.rs
backend/tests/api/: bookmarks.rs  documents.rs  helpers.rs  main.rs  mod.rs  search.rs
backend/tests/indexer/: mod.rs
deploy/: entrypoint.sh  nginx-default.conf  nginx.conf
frontend/: .eslintrc.json  next.config.js  package.json  tailwind.config.js
frontend/components/: documents.tsx  uploader.tsx
frontend/pages/: _document.tsx  index.tsx
frontend/src/: App.css  App.tsx  models.tsx
frontend/src/components/: documents.tsx  pagecontrol.tsx  topmenu.tsx  uploader.tsx  viewer.tsx
frontend/src/components/Drawer/: bookmark-drawer.tsx  drawer.tsx  search-drawer.tsx
frontend/src/pages/: index.tsx
frontend/src/styles/: theme.ts
