[package]
name = "pdf-reader"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pdfreader"

[dependencies]
actix-files = "0.6.0-beta.7"
actix-multipart = "0.4.0-beta.6"
actix-web = "4.0.0-beta.9"
config = "0.11.0"
futures = "0.3.17"
serde = "1.0.130"
chrono = {version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"], default-features = false }
tokio = { version = "1.12.0", features = ["fs"]}
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.sqlx]
version = "0.5.6"
default-features = false
features = [
    "sqlite",
    "runtime-actix-rustls",
    "migrate",
    "uuid",
    "macros",
    "chrono",
    "offline"
]
