[package]
name = "pdf-reader"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pdfreader"

[dependencies]
actix-files = "0.6.0-beta.8"
actix-multipart = "0.4.0-beta.7"
actix-web = "4.0.0-beta.10"
config = "0.11.0"
futures = "0.3.17"
serde = "1.0.130"
chrono = {version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
tokio = { version = "1.12.0", features = ["fs"]}
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
    "postgres",
    "runtime-actix-rustls",
    "migrate",
    "uuid",
    "macros",
    "chrono",
    "offline"
]

[dev-dependencies]
actix-rt = "2.3.0"
reqwest = {version = "0.11.6", features = ["multipart", "blocking"]}

