[package]
name = "pdf-reader"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pdfreader"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.4.0"
actix-web = "4.2.1"
config = "0.13.3"
futures = "0.3.25"
serde = "1.0.152"
chrono = {version = "0.4.23", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
tokio = { version = "1.24.0", features = ["fs"]}
log = "0.4.17"
env_logger = "0.10.0"
pdfium-render = "0.7.27"
thiserror = "1.0.38"
anyhow = "1.0.68"
tantivy = "0.19.0"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.6"
once_cell = "1.17.0"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "postgres",
    "runtime-actix-rustls",
    "migrate",
    "uuid",
    "macros",
    "chrono",
    "offline"
]

[dev-dependencies]
actix-rt = "2.7.0"
fake = "2.5.0"
reqwest = {version = "0.11.13", features = ["multipart", "blocking", "json"]}
tempfile = "3.3.0"

